<resources>
    <string name="app_name">FebaThampanTask2</string>
    <string name="register">Register</string>
    <string name="title">TastyRecipes</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="existing_user">Existing User?</string>
    <string name="login">Login</string>
</resources>