<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/title"
        app:titleTextAppearance="@style/TitleText"
        />

    <TextView
        android:id="@+id/registerHeader"
        android:text="@string/register"
        style="@style/TextInputLarge"/>

    <EditText
        android:id="@+id/name"
        android:inputType="text"
        android:hint="@string/name"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_user"
        style="@style/EditText"
        />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_email"
        style="@style/EditText"
        />

    <EditText
        android:id="@+id/password"
        style="@style/EditText"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_shield2"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_shield2"
        style="@style/EditText"
        />

    <EditText
        android:id="@+id/address"
        android:inputType="text"
        android:hint="@string/address"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_apartment"
        style="@style/EditText"
        />
    <Button
        android:id="@+id/register_btn"
        android:text="@string/register"
        android:background="@drawable/border"
        style="@style/AppButton"
        />
    <TextView
        android:id="@+id/existing_user"
        android:text="@string/existing_user"
        style="@style/TextView_1"
        />
    <Button
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:background="@drawable/border"
        style="@style/AppButton"
        />
</LinearLayout>